After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738226 - Full-screen apps (like anaconda) sometimes do not show when screen recording through gnome-shell
Full-screen apps (like anaconda) sometimes do not show when screen recording ...
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2014-10-09 12:37 UTC by Kamil Páral
Modified: 2014-10-09 12:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell-recorder: Disable unredirection while recording (1.58 KB, patch)
2014-10-09 12:48 UTC, drago01
committed Details | Review

Description Kamil Páral 2014-10-09 12:37:27 UTC
I wanted to record a bug in anaconda (Fedora installer), so I recorded it using ctrl+alt+shift+r shortcut. But when I looked at the recording, sometimes anaconda was visible, and sometimes it was "transparent" - I saw everything beneath anaconda (usually plain desktop) instead of the app itself. This changed based on my actions - usually invoking or closing some dialog either displayed or hid anaconda.

I attach a video where you'll see what I recorded. Sometimes you'll see my mouse cursor moving above the empty desktop. But in fact, I was inside anaconda all the time, working with it. The program doesn't get "transparent" for me (except for two seconds while "Accepting Changes", I guess that's either a bug in anaconda or related bug in gnome-shell). But in the recording, it's transparent most of the time (since the first time I used dialogs in the manual partitioning screen).

Tested with:
Fedora 21 Beta TC2 Workstation Live x86_64
gnome-shell-3.14.0-2.fc21.x86_64
mutter-3.14.0-3.fc21.x86_64
anaconda-21.48.8-1.fc21.x86_64

I can reproduce the problem most of the time on bare metal, tested with intel and radeon drivers. I can't reproduce the problem in VM using llvmpipe (spice+qxl). Sometimes it's harder to reproduce the problem several times in a row, but the first attempt usually shows the bug.
Comment 1 Kamil Páral 2014-10-09 12:43:26 UTC
Max 1.6 MB can be attached, so linking my recording instead:

https://kparal.fedorapeople.org/bugs/gnome_738226.webm

The first glitch comes at 0:27. On my screen I see anaconda the whole time, except for a second or two after 0:37.
Comment 2 drago01 2014-10-09 12:48:43 UTC
Created attachment 288127 [details] [review]
shell-recorder: Disable unredirection while recording

This is required to be able to record windows that would
otherwise be unredirected.
Comment 3 drago01 2014-10-09 12:52:50 UTC
Attachment 288127 [details] pushed as 1b3c89f - shell-recorder: Disable unredirection while recording

Pushed after IRC review.